<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

<!-- menampilkan nama bangun -->
            <TextView
                android:id="@+id/nameBangun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:text="@string/btnBeranda0"
                android:textColor="@color/font"
                android:textSize="25sp"
                android:fontFamily="@font/baloo_bhai"/>

<!-- menampilkan gambar bangun -->
            <ImageView
                android:id="@+id/imageBangun"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/btnBeranda0"
                app:srcCompat="@drawable/math1" />

<!-- menampilkan all about bangun -->
            <TextView
                android:id="@+id/allAboutBangun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/amaranth"
                android:justificationMode="inter_word"
                android:text="@string/allAboutBangun"
                android:textColor="@color/font"
                android:textSize="13sp"
                android:background="#a0afff"
                android:padding="10dp"/>

<!-- menampilkan latihan soal dan cara mngerjakan -->
            <TextView
                android:id="@+id/soalBangun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/soal"
                android:textColor="@color/font"
                android:justificationMode="inter_word"
                android:textSize="13sp"
                android:background="#d5c2ee"
                android:padding="10dp"/>
<!-- menampilkan teks design by ... -->
            <TextView
                android:id="@+id/design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/acme"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/design"
                android:textColor="@color/font"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>