<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/datar"
    tools:context=".ActivityDatar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<!-- menampilkan teks judul konten-->
        <TextView
            android:id="@+id/dDatar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/definisi"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="250dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

<!-- menampilkan teks deinisi bangun datar-->
            <TextView
                android:id="@+id/desDatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fontFamily="@font/baloo_bhai"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/definisi0"
                android:textColor="@color/font"
                android:textSize="12sp" />

<!-- menampilkan tombol Bangun Datar untuk ke activitas selanjutnya -->
            <Button
                android:id="@+id/btnDatar"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/btnBeranda"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>