<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ruangbangun"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<!-- menampilkan pesan -->
        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/acme"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/intro"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

<!-- menampilkan pesan -->
        <TextView
            android:id="@+id/jargon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/acme"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/jargon"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

<!-- menggunakan recycler view -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_bangun"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

<!-- menampilkan teks design by-->
                <TextView
                    android:id="@+id/design"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/acme"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/design"
                    android:textColor="@color/font"
                    android:textSize="15sp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>